Settings: Long press power button to toggle flashlight [2/2]
* Switch to new Android 12 animation. Huge thanks to @aryanata (https://github.com/aryanata) for the animation

Change-Id: I27ecdaf223815792bb1220e34d976e43aea57f19

--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -106,6 +106,12 @@
         android:summary="@string/doze_double_tap_summary"
         settings:userRestriction="no_ambient_display" />
 
+    <Preference
+        android:key="power_button_torch_summary"
+        android:title="@string/power_button_torch_title"
+        android:fragment="com.android.settings.gestures.PowerButtonTorchSettings"
+        settings:controller="com.android.settings.gestures.PowerButtonTorchGesturePreferenceController" />
+
     <com.android.settings.widget.PrimarySwitchPreference
         android:key="gesture_prevent_ringing_summary"
         android:title="@string/gesture_prevent_ringing_screen_title"
