--- a/res/values/404_strings.xml
+++ b/res/values/404_strings.xml
@@ -300,4 +300,10 @@
     <string name="max_refresh_rate_title">Maximum refresh rate</string>
     <string name="battery_saver_refresh_rate_title">Reduce refresh rate</string>
     <string name="battery_saver_refresh_rate_summary">Use 60 Hz as max refresh rate to save power when Battery Saver is on</string>
+
+    <!-- Connection menu Summary -->
+    <string name="min_bluetooth_summary">Bluetooth Connections</string>
+    <string name="min_printer_summary">Printer Connections</string>
+    <string name="min_nfc_summary">NFC Connections</string>
+    <string name="min_cast_summary">Cast Connections</string>
 </resources>
