Settings: Add preference for KEY_MIN_REFRESH_RATE
Change-Id: Iac1f65ab09717ea55a5b471e094385c77ba894ee
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Signed-off-by: namaskaragusthi <senaoutsider123@gmail.com>

--- a/res/values/404_strings.xml
+++ b/res/values/404_strings.xml
@@ -151,4 +151,7 @@
     <!-- Battery stats reset -->
     <string name="battery_stats_reset">Reset stats</string>
     <string name="battery_stats_message">Battery history stats are going to be reset</string>
+
+    <!-- Min refresh rate -->
+    <string name="min_refresh_rate_title">Minimum Refresh-Rate</string>
 </resources>
