--- a/res/values/404_strings.xml
+++ b/res/values/404_strings.xml
@@ -157,4 +157,7 @@
     <string name="lockscreen_media_blur_title">Media art blur level</string>
     <string name="show_lockscreen_media_art_title">Show media art</string>
     <string name="lockscreen_media_art_options_title">Lockscreen media art</string>
+
+    <!-- Min refresh rate -->
+    <string name="min_refresh_rate_title">Minimum Refresh-Rate</string>
 </resources>
