Settings: Add peak refresh rate list preference
* AOSP 'Smooth display' setting is just a toggle,
  some devices support multiple refresh rates so
  add support for it with a ListPreference.

* @jhonboy121: unify config flag for both min and max list preference

Change-Id: I3da3d2b86e61ed3caf9af5770d8bdb4485817b97
Signed-off-by: namaskaragusthi <senaoutsider123@gmail.com>

--- a/res/values/404_config.xml
+++ b/res/values/404_config.xml
@@ -36,6 +36,6 @@
     <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
     <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
 
-    <!-- Whether to show min refresh rate in display settings -->
-    <bool name="config_show_min_refresh_rate_switch">false</bool>
+    <!-- Whether to show min / max refresh rate preference in display settings -->
+    <bool name="config_show_refresh_rate_switch">false</bool>
 </resources>
