--- a/res/values/404_strings.xml
+++ b/res/values/404_strings.xml
@@ -152,6 +152,7 @@
     <string name="battery_stats_reset">Reset stats</string>
     <string name="battery_stats_message">Battery history stats are going to be reset</string>
 
-    <!-- Min refresh rate -->
+    <!-- Min / max refresh rate -->
     <string name="min_refresh_rate_title">Minimum Refresh-Rate</string>
+    <string name="max_refresh_rate_title">Maximum Refresh-Rate</string>
 </resources>
