--- a/res/values/404_strings.xml
+++ b/res/values/404_strings.xml
@@ -161,4 +161,5 @@
     <!-- Min / max refresh rate -->
     <string name="min_refresh_rate_title">Minimum Refresh-Rate</string>
     <string name="max_refresh_rate_title">Maximum Refresh-Rate</string>
+    <string name="refresh_rate_placeholder"><xliff:g id="refresh_rate" example="60">%1$s</xliff:g> Hz</string>
 </resources>
